Fixed some z-index issues

--- a/themes/grav/scss/preset.scss
+++ b/themes/grav/scss/preset.scss
@@ -1434,7 +1434,7 @@ form {
 
 #admin-topbar {
     #admin-lang-toggle {
-        z-index: 10;
+        z-index: 2;
         button {
             @include button-color($update-bg);
         }
