--- a/themes/grav/scss/template/_admin.scss
+++ b/themes/grav/scss/template/_admin.scss
@@ -565,7 +565,7 @@ body.sidebar-quickopen #admin-main {
             @extend %vertical-align;
             padding: 0;
             white-space: nowrap;
-            z-index: 4;
+            z-index: 2;
         }
 
         .preview {
