--- a/themes/grav/scss/template/_forms.scss
+++ b/themes/grav/scss/template/_forms.scss
@@ -547,7 +547,7 @@ textarea.frontmatter {
 
     }
     label {
-        z-index: 3;
+        z-index: 2;
     }
 }
 
